--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/disclosure": "^0.10.4",
-    "@reach/menu-button": "^0.10.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@tlon/indigo-react": "^1.1.13",
-    "@tlon/indigo-tokens": "^1.3.6",
-    "codemirror": "^5.54.0",
-    "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "styled-components": "^5.1.1",
-    "styled-system": "^5.1.5",
-    "yup": "^0.29.1"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
